hide listening log widget since i don't think i'll be doing them much!

--- a/doqmeat/music/index.css
+++ b/doqmeat/music/index.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-areas:
     "header header header"
-    "nav frame log"
+    "nav frame updates"
     "nav frame updates"
     "mv mv mv"
     "featured featured featured"
