added the frame link script to journal (i forgor?)

--- a/doqmeat/journal/entry.css
+++ b/doqmeat/journal/entry.css
@@ -70,7 +70,7 @@ article:last-child {
 .title {
   font-family: morningtea, var(--fonts);
   float: left;
-  color: #d16565;
+  color: #586d94;
   text-shadow: 1px 1px 4px #ffffff;
   padding-top: 5px;
 }
