--- a/doqmeat/blog/body.css
+++ b/doqmeat/blog/body.css
@@ -1,27 +1,27 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-	--fonts: ms pgothic, gaegu-l, arial;
+  --fonts: ms pgothic, gaegu-l, arial;
 }
 
 body {
-	word-wrap: break-word;
-	margin: 0;
-	font-size: 19px;
-	line-height: 25px;
-	word-spacing: 5px;
-	font-family: var(--fonts);
+  word-wrap: break-word;
+  margin: 0;
+  font-size: 19px;
+  line-height: 25px;
+  word-spacing: 5px;
+  font-family: var(--fonts);
 }
 
 li {
-	padding-left: 2px;
-	list-style-position: inside;
+  padding-left: 2px;
+  list-style-position: inside;
 }
 
 h1 {
-	text-align: center;
+  text-align: center;
 }
 
 h1,
@@ -30,8 +30,8 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: spirit, var(--fonts);
-	letter-spacing: 2px;
+  font-family: spirit, var(--fonts);
+  letter-spacing: 2px;
 }
 
 i,
@@ -40,260 +40,260 @@ a,
 b,
 strong,
 mark {
-	padding: 1px 3px;
-	border-radius: 5px;
-	box-decoration-break: clone;
+  padding: 1px 3px;
+  border-radius: 5px;
+  box-decoration-break: clone;
 }
 
 i a,
 b a,
 mark a,
 strong a {
-	background: transparent;
+  background: transparent;
 }
 
 figure {
-	text-align: center;
+  text-align: center;
 }
 
 figcaption {
-	font-size: 14px;
+  font-size: 14px;
 }
 
 a {
-	font-weight: normal;
-	text-decoration: underline;
+  font-weight: normal;
+  text-decoration: underline;
 }
 
 a:hover {
-	text-decoration: none;
-	cursor: help;
+  text-decoration: none;
+  cursor: help;
 }
 
 a:active {
-	text-decoration: wavy underline;
+  text-decoration: wavy underline;
 }
 
 a:focus {
-	text-decoration: wavy underline;
+  text-decoration: wavy underline;
 }
 
 .img {
-	background: transparent
+  background: transparent;
 }
 
 p img {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 img[align] {
-	margin: 10px;
-	transition-duration: 0.5s;
-	border-radius: 10px;
+  margin: 10px;
+  transition-duration: 0.5s;
+  border-radius: 10px;
 }
 
 img[align]:hover {
-	border-radius: 0px;
-	rotate: 2deg;
+  border-radius: 0px;
+  rotate: 2deg;
 }
 
 summary {
-	padding-left: 10px;
-	padding: 5px;
-	cursor: help;
+  padding-left: 10px;
+  padding: 5px;
+  cursor: help;
 }
 
 blockquote {
-	margin: 1em 40px;
-	border-left: 2px dotted black;
-	padding-left: 5px;
+  margin: 1em 40px;
+  border-left: 2px dotted black;
+  padding-left: 5px;
 }
 
 ::selection {
-	color: black;
-	background-color: #A6DDFF;
+  color: black;
+  background-color: #a6ddff;
 }
 
 /*my things*/
 
 .spoiler {
-	background-color: black;
-	color: black;
+  background-color: black;
+  color: black;
 }
 
 .transp {
-	background: transparent;
+  background: transparent;
 }
 
 .spoiler:hover {
-	background-color: transparent;
+  background-color: transparent;
 }
 
 .centered {
-	text-align: center;
+  text-align: center;
 }
 
 .f-fix {
-	overflow: hidden;
+  overflow: hidden;
 }
 
-.outlink:after {
-	padding-left: 3px;
-	vertical-align: text-bottom;
+.outlink::after {
+  content: "↗";
+  padding-left: 2px;
+  vertical-align: text-bottom;
 }
 
 /*class toggle button */
 
 #toggle {
-	vertical-align: middle;
-	font-family: ms gothic;
-	font-size: 20px;
-	width: 30px;
-	z-index: 1;
-	position: relative;
-	float: right;
-	background: transparent;
-	border: 1px dotted transparent;
+  vertical-align: middle;
+  font-family: ms gothic;
+  font-size: 20px;
+  width: 30px;
+  z-index: 1;
+  position: relative;
+  float: right;
+  background: transparent;
+  border: 1px dotted transparent;
 }
 
 #music-btn {
-	background-color: transparent;
-	border: 0px;
-	margin-top: 5px;
-	float: right;
-	cursor: help;
+  background-color: transparent;
+  border: 0px;
+  margin-top: 5px;
+  float: right;
+  cursor: help;
 }
 
 header,
 main,
 footer {
-	max-width: 630px;
-	margin: auto;
-	border-style: dashed;
-	border-width: 2px;
+  max-width: 630px;
+  margin: auto;
+  border-style: dashed;
+  border-width: 2px;
 }
 
 header {
-	z-index: 1;
-	position: sticky;
-	padding: 5px;
-	top: 0;
-	margin-top: 20px;
+  z-index: 1;
+  position: sticky;
+  padding: 5px;
+  top: 0;
+  margin-top: 20px;
 }
 
 main {
-	position: relative;
-	padding: 10px;
-	border-top: 0;
-	border-bottom: 0;
+  position: relative;
+  padding: 10px;
+  border-top: 0;
+  border-bottom: 0;
 }
 
 footer {
-	position: relative;
-	text-align: center;
-	padding: 5px;
+  position: relative;
+  text-align: center;
+  padding: 5px;
 }
 
 nav {
-	position: fixed;
-	font-size: 15px;
-	width: 240px;
-	height: 300px;
-	padding: 5px;
-	bottom: -270px;
-	overflow: auto;
-	left: 10px;
-	transition-duration: 1s;
-	border-style: dashed;
-	border-width: 1px;
-	border-radius: 15px 15px 0px 0px
+  position: fixed;
+  font-size: 15px;
+  width: 240px;
+  height: 300px;
+  padding: 5px;
+  bottom: -270px;
+  overflow: auto;
+  left: 10px;
+  transition-duration: 1s;
+  border-style: dashed;
+  border-width: 1px;
+  border-radius: 15px 15px 0px 0px;
 }
 
 nav:hover {
-	bottom: 1px;
+  bottom: 1px;
 }
 
 nav a {
-	background: transparent;
-	text-decoration: none;
+  background: transparent;
+  text-decoration: none;
 }
 
 nav ul {
-	padding-left: 15px;
-	margin: 5px 0px;
+  padding-left: 15px;
+  margin: 5px 0px;
 }
 
 nav h5 {
-	margin: 0px;
+  margin: 0px;
 }
 
 nav a {
-	cursor: cell;
-	transition-duration: 0.3s;
+  cursor: cell;
+  transition-duration: 0.3s;
 }
 
 nav a:hover {
-	text-decoration: wavy underline;
+  text-decoration: wavy underline;
 }
-
-
 
 /* black and white classes options */
 
 .date {
-	font-family: spirit, var(--fonts);
-	text-align: right;
-	font-size: 13px;
-	font-weight: normal;
+  font-family: spirit, var(--fonts);
+  text-align: right;
+  font-size: 13px;
+  font-weight: normal;
 }
 
 /* tooltip */
 
 #s-m-t-tooltip {
-	max-width: 200px;
-	font-family: var(--fonts);
-	text-align: center;
-	font-size: 16px;
-	border-radius: 10px;
-	z-index: 9999;
-	margin: 30px 15px 7px 12px;
-	padding: 5px;
+  max-width: 200px;
+  font-family: var(--fonts);
+  text-align: center;
+  font-size: 16px;
+  border-radius: 10px;
+  z-index: 9999;
+  margin: 30px 15px 7px 12px;
+  padding: 5px;
 }
 
 @media only screen and (max-width: 1030px) {
-	nav {
-		background: transparent;
-		position: relative;
-		margin: auto;
-		width: auto;
-		max-width: 300px;
-		height: 200px;
-		padding: 5px;
-		bottom: 0;
-		overflow: auto;
-		border-radius: 15px;
-		left: 0;
-		transition-duration: 0s;
-	}
+  nav {
+    background: transparent;
+    position: relative;
+    margin: auto;
+    width: auto;
+    max-width: 300px;
+    height: 200px;
+    padding: 5px;
+    bottom: 0;
+    overflow: auto;
+    border-radius: 15px;
+    left: 0;
+    transition-duration: 0s;
+  }
 
-	nav:hover {
-		bottom: 0;
-	}
-
+  nav:hover {
+    bottom: 0;
+  }
 }
 
 @media only screen and (max-width: 630px) {
-	header {
-		margin-top: 0px;
-		border-top: 0px;
-	}
+  header {
+    margin-top: 0px;
+    border-top: 0px;
+  }
 
-	header,main,footer{
-		border-left: 0px;
-		border-right: 0px;
-	}
+  header,
+  main,
+  footer {
+    border-left: 0px;
+    border-right: 0px;
+  }
 
-	footer {
-		border-bottom: 0px;
-	}
+  footer {
+    border-bottom: 0px;
+  }
 }
