changed font for better reading

--- a/doqmeat/journal/body.css
+++ b/doqmeat/journal/body.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-  --fonts: gaegu-l, arial;
+  --fonts: gaegu-r, arial;
   --r-border: 2px solid #e4a79d;
   --cream: #fffcdc;
   --red: #c9525e;
