changed /projects --> /learning

--- a/doqmeat/learning/body.css
+++ b/doqmeat/learning/body.css
@@ -96,6 +96,7 @@ footer p {
   z-index: 9999;
   margin: 30px 15px 7px 12px;
   padding: 5px;
+  font-size: 18px;
   font-family: gaegu-l;
   max-width: 300px;
   border-radius: 20px;
