--- a/doqmeat/recipes/body.css
+++ b/doqmeat/recipes/body.css
@@ -3,18 +3,31 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
+  background: url("/!g/bg/baking.png");
+  font-family: ms pgothic, arial;
+  font-size: 18px;
+}
+
+main {
+  border-radius: 10px;
+  background: url("/!g/bg/bggrid-transp.png");
+  background-color: rgb(254, 249, 220);
   max-width: 600px;
   margin: auto;
   padding: 10px;
 }
 
 hr {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
   border: none;
   text-align: center;
 }
 
 hr::after {
   content: "✦•┈๑⋅⋯ ⋯⋅๑┈•✦ ✦•┈๑⋅⋯ ⋯⋅๑┈•✦ ✦•┈๑⋅⋯ ⋯⋅๑┈•✦";
+}
+
+footer {
+  text-align: center;
 }
