--- a/doqmeat/notebook/index.css
+++ b/doqmeat/notebook/index.css
@@ -1,5 +1,5 @@
 body {
-  background: rgb(255, 240, 204);
+  background: url("/!g/bg/rainbow-notepad.gif");
 }
 
 ::selection {
@@ -67,12 +67,12 @@ li {
   margin: 30px 25px 10px 10px;
   z-index: 11;
   box-sizing: border-box;
-  font-size: 25px;
+  font-size: 16px;
   line-height: 28.5px;
   text-align: center;
   width: 200px;
   height: 280px;
-  padding: 5px;
+  padding: 15px;
   top: 60%;
   left: 30%;
   rotate: -5deg;
