--- a/doqmeat/blog/light.css
+++ b/doqmeat/blog/light.css
@@ -1,66 +1,33 @@
 /*https://coolors.co/fdfffa-444444-dde2c6-ffeca6-a72608*/
 
 :root {
-	--bg: rgb(253, 255, 250, 0.96);
-	--text: #444444;
-	--acc: #DDE2C6;
+  --bg: rgb(253, 255, 250, 0.96);
+  --text: #444444;
+  --acc: #dde2c6;
+}
+
+html {
+  scrollbar-color: ;
 }
 
 .outlink:after {
-	content: url(/!g/web/materials/outlink2.png);
+  content: url(/!g/web/materials/outlink2.png);
 }
 
-body {
-	color: var(--text);
-}
-
-li{
-		list-style-image: url('/!g/pix/1leaf.png');
+li {
+  list-style-image: url("/!g/pix/1leaf.png");
 }
 
 i,
 em {
-	background: #C7D9F8;
+  background: #c7d9f8;
 }
 
 b,
 strong {
-	background: #E4A79D;
+  background: #e4a79d;
 }
 
 mark {
-	background: #FFECA6;
-}
-
-a {
-	background: var(--acc);
-	color: var(--text);
-}
-
-main,
-header,
-footer,
-nav {
-	background: var(--bg);
-	border-color: var(--text);
-}
-
-blockquote {
-	margin: 1em 40px;
-	border-left: 2px solid var(--acc);
-	padding-left: 5px;
-}
-
-nav a {
-	color: var(--text);
-}
-
-#toggle {
-	color: var(--text);
-}
-
-#s-m-t-tooltip {
-	color: var(--bg);
-	border: 1px dashed var(--bg);
-	background: var(--text);
+  background: #ffeca6;
 }
