--- a/doqmeat/learning/body.css
+++ b/doqmeat/learning/body.css
@@ -54,6 +54,10 @@ a {
   transition-duration: 0.5s;
 }
 
+mark {
+  background: #d0ffd5;
+}
+
 a:hover {
   border-radius: 5px 5px 0 0;
   background: #fcd7c7;
