--- a/doqmeat/microblog/index.css
+++ b/doqmeat/microblog/index.css
@@ -1,382 +1,386 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 :root {
-  --blue1: hsla(212, 46%, 52%, 1);
-  --blue2: hsla(213, 41%, 69%, 1);
-  --yellow: hsla(33, 88%, 83%, 1);
-  --pink: hsla(344, 51%, 67%, 1);
-  --violet: hsla(323, 21%, 41%, 1);
-  --peach: hsla(16, 91%, 78%, 1);
+	--blue1: hsla(212, 46%, 52%, 1);
+	--blue2: hsla(213, 41%, 69%, 1);
+	--yellow: hsla(33, 88%, 83%, 1);
+	--pink: hsla(344, 51%, 67%, 1);
+	--violet: hsla(323, 21%, 41%, 1);
+	--peach: hsla(16, 91%, 78%, 1);
 }
 
 html {
-  scrollbar-color: #a3b5cb #ca7f9a;
+	scrollbar-color: #a3b5cb #ca7f9a;
 }
 
 body {
-  background: url(bg.png) no-repeat bottom fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: mononoki, consolas, arial;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  color: black;
-  font-size: 14px;
-  word-break: keep-all;
+	background: url(bg.png) no-repeat bottom fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	font-family: mononoki, consolas, arial;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	color: black;
+	font-size: 14px;
+	word-break: keep-all;
+}
+
+q {
+	font-style: italic;
 }
 
 a {
-  color: var(--blue1);
-  cursor: help;
+	color: var(--blue1);
+	cursor: help;
 }
 
 p img {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 a:hover {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 i {
-  text-shadow: 1px 1px 1px white;
+	text-shadow: 1px 1px 1px white;
 }
 
 button {
-  font-family: inherit;
-  color: inherit;
+	font-family: inherit;
+	color: inherit;
 }
 
 main {
-  color: var(--violet);
-  background: #ecd3fc;
-  display: grid;
-  grid-template-areas:
-    "bar"
-    "address"
-    "microblog";
-  grid-template-columns: 100%;
-  grid-template-rows: 25px 27px 550px;
-  position: static;
-  margin: auto;
-  margin-top: 30px;
-  max-width: 800px;
-  border: 2px var(--blue2) solid;
-  overflow: hidden;
-  box-shadow: 3px 3px 10px #4b81bd;
-  border-radius: 5px;
+	color: var(--violet);
+	background: #ecd3fc;
+	display: grid;
+	grid-template-areas:
+		"bar"
+		"address"
+		"microblog";
+	grid-template-columns: 100%;
+	grid-template-rows: 25px 27px 550px;
+	position: static;
+	margin: auto;
+	margin-top: 30px;
+	max-width: 800px;
+	border: 2px var(--blue2) solid;
+	overflow: hidden;
+	box-shadow: 3px 3px 10px #4b81bd;
+	border-radius: 5px;
 }
 
 #blog {
-  grid-area: microblog;
-  background: var(--yellow);
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: none;
-  overflow: auto;
-  padding: 10px;
+	grid-area: microblog;
+	background: var(--yellow);
+	display: block;
+	width: 100%;
+	height: 100%;
+	border: none;
+	overflow: auto;
+	padding: 10px;
 }
 
 #blog img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 #blog button {
-  border: 1px solid grey;
-  padding: 2px;
-  border-radius: 5px;
-  background: var(--blue2);
+	border: 1px solid grey;
+	padding: 2px;
+	border-radius: 5px;
+	background: var(--blue2);
 }
 
 #blog button:hover {
-  background: var(--yellow);
-  border-color: var(--blue);
+	background: var(--yellow);
+	border-color: var(--blue);
 }
 
 #blog button:focus {
-  border-color: var(--blue2);
-  background: var(--pink);
-  color: white;
+	border-color: var(--blue2);
+	background: var(--pink);
+	color: white;
 }
 
 #picture-win {
-  display: none;
-  padding: 5px;
-  background: var(--blue2);
-  border: 1px solid black;
-  position: absolute;
-  bottom: 90px;
-  right: 250px;
-  max-height: 300px;
-  overflow: auto;
-  width: 290px;
-  cursor: move;
+	display: none;
+	padding: 5px;
+	background: var(--blue2);
+	border: 1px solid black;
+	position: absolute;
+	bottom: 90px;
+	right: 250px;
+	max-height: 300px;
+	overflow: auto;
+	width: 290px;
+	cursor: move;
 }
 
 #picture {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 #pic-link:hover {
-  cursor: zoom-in;
+	cursor: zoom-in;
 }
 
 #picture-title {
-  display: inline-block;
-  margin-top: 5px;
-  text-shadow: 1px 1px 3px white;
+	display: inline-block;
+	margin-top: 5px;
+	text-shadow: 1px 1px 3px white;
 }
 
 #picture-win .x {
-  margin: 4px;
+	margin: 4px;
 }
 
 #bar {
-  background: rgb(250, 216, 175);
-  background: linear-gradient(
-    0deg,
-    rgba(250, 216, 175, 1) 0%,
-    rgba(214, 130, 152, 1) 100%
-  );
-  grid-area: bar;
-  text-align: right;
-  font-weight: bold;
-  font-size: 12px;
-  word-spacing: 10px;
-  padding: 1px 5px;
+	background: rgb(250, 216, 175);
+	background: linear-gradient(
+		0deg,
+		rgba(250, 216, 175, 1) 0%,
+		rgba(214, 130, 152, 1) 100%
+	);
+	grid-area: bar;
+	text-align: right;
+	font-weight: bold;
+	font-size: 12px;
+	word-spacing: 10px;
+	padding: 1px 5px;
 }
 
 #address-bar {
-  background: var(--yellow);
-  grid-area: address;
-  font-weight: bold;
-  text-align: left;
-  font-size: 18px;
-  padding: 0px 5px;
+	background: var(--yellow);
+	grid-area: address;
+	font-weight: bold;
+	text-align: left;
+	font-size: 18px;
+	padding: 0px 5px;
 }
 
 #address-bar button {
-  cursor: help;
-  font-size: inherit;
-  font-family: inherit;
-  font-weight: inherit;
-  background: none;
-  border: none;
-  color: hsla(212, 46%, 52%, 1);
+	cursor: help;
+	font-size: inherit;
+	font-family: inherit;
+	font-weight: inherit;
+	background: none;
+	border: none;
+	color: hsla(212, 46%, 52%, 1);
 }
 
 #home button {
-  width: 150px;
-  background-color: transparent;
-  border: 1px solid var(--pink);
-  padding: 10px;
-  cursor: pointer;
+	width: 150px;
+	background-color: transparent;
+	border: 1px solid var(--pink);
+	padding: 10px;
+	cursor: pointer;
 }
 
 #home button:hover {
-  background-color: var(--pink);
+	background-color: var(--pink);
 }
 
 .year {
-  display: block;
-  font-weight: bold;
-  letter-spacing: 2px;
-  padding: 5px 0px;
+	display: block;
+	font-weight: bold;
+	letter-spacing: 2px;
+	padding: 5px 0px;
 }
 
 #home button img {
-  display: block;
-  width: 100%;
-  border-radius: 10px;
-  filter: grayscale(50%);
+	display: block;
+	width: 100%;
+	border-radius: 10px;
+	filter: grayscale(50%);
 }
 
 #home button img:hover {
-  filter: grayscale(0%);
+	filter: grayscale(0%);
 }
 
 #address {
-  font-weight: normal;
-  font-size: 16px;
-  margin-left: 40px;
-  padding: 5px;
-  display: inline-block;
-  background: white;
-  color: black;
-  width: 80%;
-  line-height: 10px;
-  border: 1px solid grey;
-  border-radius: 10px;
+	font-weight: normal;
+	font-size: 16px;
+	margin-left: 40px;
+	padding: 5px;
+	display: inline-block;
+	background: white;
+	color: black;
+	width: 80%;
+	line-height: 10px;
+	border: 1px solid grey;
+	border-radius: 10px;
 }
 
 .icon {
-  position: absolute;
-  width: 70px;
+	position: absolute;
+	width: 70px;
 }
 
 #puter {
-  top: 10px;
-  left: 10px;
-  cursor: cell;
+	top: 10px;
+	left: 10px;
+	cursor: cell;
 }
 
 #mouse {
-  bottom: 30px;
-  left: 70px;
-  cursor: cell;
+	bottom: 30px;
+	left: 70px;
+	cursor: cell;
 }
 
 button.x {
-  font-family: inherit;
-  border: 1px dashed grey;
-  color: inherit;
-  font-size: 18px;
-  padding: 5px;
-  line-height: 10px;
-  border-radius: 5px;
-  background: white;
-  float: right;
+	font-family: inherit;
+	border: 1px dashed grey;
+	color: inherit;
+	font-size: 18px;
+	padding: 5px;
+	line-height: 10px;
+	border-radius: 5px;
+	background: white;
+	float: right;
 }
 
 #info button.x {
-  background: var(--blue2);
+	background: var(--blue2);
 }
 
 #info button.x:hover,
 button.x:hover {
-  background: var(--yellow);
-  color: brown;
+	background: var(--yellow);
+	color: brown;
 }
 
 #info {
-  display: none;
-  text-align: left;
-  position: absolute;
-  bottom: 100px;
-  left: 30px;
-  background: #6f5994;
-  color: white;
-  max-width: 190px;
-  padding: 10px;
-  border-radius: 10px;
+	display: none;
+	text-align: left;
+	position: absolute;
+	bottom: 100px;
+	left: 30px;
+	background: #6f5994;
+	color: white;
+	max-width: 190px;
+	padding: 10px;
+	border-radius: 10px;
 }
 
 #info p {
-  margin: 10px 0px;
+	margin: 10px 0px;
 }
 
 #info a {
-  color: black;
-  background: lightyellow;
-  padding: 0px 3px;
+	color: black;
+	background: lightyellow;
+	padding: 0px 3px;
 }
 
 #info a:hover {
-  color: #dcf0c2;
-  background: #e992f7;
+	color: #dcf0c2;
+	background: #e992f7;
 }
 
 .icon span {
-  background: rgb(249, 251, 242, 0.7);
-  padding: 1px;
+	background: rgb(249, 251, 242, 0.7);
+	padding: 1px;
 }
 
 footer {
-  text-align: left;
-  position: fixed;
-  bottom: 0px;
-  height: 30px;
-  background: white;
-  width: 100%;
-  margin: 0;
+	text-align: left;
+	position: fixed;
+	bottom: 0px;
+	height: 30px;
+	background: white;
+	width: 100%;
+	margin: 0;
 }
 
 article {
-  margin: 0;
-  padding: 2px 10px;
-  transition-duration: 0.5s;
+	margin: 0;
+	padding: 2px 10px;
+	transition-duration: 0.5s;
 }
 
 article:hover {
-  background: white;
-  border-radius: 10px;
+	background: white;
+	border-radius: 10px;
 }
 
 .outlink::after {
-  content: "↗";
-  padding-left: 2px;
-  vertical-align: text-bottom;
+	content: "↗";
+	padding-left: 2px;
+	vertical-align: text-bottom;
 }
 
 #s-m-t-tooltip {
-  color: white;
-  font-size: 15px;
-  max-width: 200px;
-  border-radius: 5px;
-  background: #4b81bd;
-  box-shadow: 0px 0px 10px white inset;
-  text-align: center;
-  z-index: 999;
-  margin: 30px 15px 7px 12px;
-  padding: 5px;
+	color: white;
+	font-size: 15px;
+	max-width: 200px;
+	border-radius: 5px;
+	background: #4b81bd;
+	box-shadow: 0px 0px 10px white inset;
+	text-align: center;
+	z-index: 999;
+	margin: 30px 15px 7px 12px;
+	padding: 5px;
 }
 
 .show {
-  display: none;
+	display: none;
 }
 
 @media only screen and (max-width: 1160px) {
-  .hide {
-    display: none;
-  }
+	.hide {
+		display: none;
+	}
 
-  #puter {
-    display: none;
-  }
+	#puter {
+		display: none;
+	}
 }
 
 @media only screen and (max-width: 600px) {
-  .show {
-    display: block;
-  }
+	.show {
+		display: block;
+	}
 
-  #mouse {
-    display: none;
-  }
+	#mouse {
+		display: none;
+	}
 
-  #picture-win {
-    left: 1%;
-    bottom: 1%;
-    position: fixed;
-    max-height: 300px;
-    overflow: auto;
-    width: 290px;
-    cursor: move;
-  }
+	#picture-win {
+		left: 1%;
+		bottom: 1%;
+		position: fixed;
+		max-height: 300px;
+		overflow: auto;
+		width: 290px;
+		cursor: move;
+	}
 
-  #info {
-    max-width: 600px;
-    margin: 20px 10px;
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    position: relative;
-    display: block;
-    text-align: center;
-  }
+	#info {
+		max-width: 600px;
+		margin: 20px 10px;
+		top: 0px;
+		left: 0px;
+		bottom: 0px;
+		position: relative;
+		display: block;
+		text-align: center;
+	}
 
-  #address {
-    width: auto;
-  }
+	#address {
+		width: auto;
+	}
 
-  main {
-    margin: 10px 10px;
-    grid-template-rows: 25px 27px 100%;
-  }
+	main {
+		margin: 10px 10px;
+		grid-template-rows: 25px 27px 100%;
+	}
 }
