--- a/doqmeat/journal/index.css
+++ b/doqmeat/journal/index.css
@@ -1,273 +1,261 @@
 #notepad {
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 40px;
-  position: relative;
-  display: grid;
-  grid-template-areas:
-    "header header"
-    "margin body";
-  grid-template-rows: 50px 580px;
-  grid-template-columns: 160px 540px;
-  max-width: 700px;
-  border: 1px solid var(--red);
-  border-radius: 10px 10px 0 0;
-  background: url("/!g/bg/yellobg.png");
-  overflow: hidden;
+	margin: auto;
+	margin-top: 20px;
+	margin-bottom: 40px;
+	position: relative;
+	display: grid;
+	grid-template-areas:
+		"header header"
+		"margin body";
+	grid-template-rows: 50px 580px;
+	grid-template-columns: 160px 540px;
+	max-width: 700px;
+	border: 1px solid var(--red);
+	border-radius: 10px 10px 0 0;
+	background: url("/!g/bg/yellobg.png");
+	overflow: hidden;
 }
 
 #header {
-  position: relative;
-  grid-area: header;
-  background: #c9525e;
-  border-bottom: 2px solid var(--l-red);
+	position: relative;
+	grid-area: header;
+	background: #c9525e;
+	border-bottom: 2px solid var(--l-red);
 }
 
 nav {
-  text-align: center;
-  font-family: var(--fonts);
-  padding: 5px;
-  grid-area: margin;
-  border-right: 2px solid var(--l-red);
-  overflow: auto;
-  scroll-behavior: smooth;
-  scrollbar-color: #c7d9f8 #e4a79d;
+	text-align: center;
+	font-family: var(--fonts);
+	padding: 5px;
+	grid-area: margin;
+	border-right: 2px solid var(--l-red);
+	overflow: auto;
+	scroll-behavior: smooth;
+	scrollbar-color: #c7d9f8 #e4a79d;
 }
 
 nav::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 h1 {
-  text-align: center;
+	text-align: center;
 }
 
 main {
-  grid-area: body;
-  margin-left: 5px;
-  border-left: 2px solid var(--l-red);
+	grid-area: body;
+	margin-left: 5px;
+	border-left: 2px solid var(--l-red);
 }
 
 #mainframe {
-  border: none;
+	border: none;
 }
 
 #tag {
-  position: fixed;
-  top: -6px;
-  left: 4px;
-  transition-duration: 0.5s;
+	position: fixed;
+	top: -6px;
+	left: 4px;
+	transition-duration: 0.5s;
 }
 
 #tag a {
-  background: transparent;
-  font-weight: bold;
-  font-size: 12px;
-  position: absolute;
-  bottom: 40px;
-  left: 40%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  rotate: -90deg;
+	background: transparent;
+	font-weight: bold;
+	font-size: 12px;
+	position: absolute;
+	bottom: 40px;
+	left: 40%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	rotate: -90deg;
 }
 
 #tag:hover {
-  top: 0px;
-}
-
-#musicbox {
-  z-index: 500;
-  background-image: url("/!g/deco/paper.gif");
-  background-size: 220px;
-  background-repeat: no-repeat;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 230px;
-}
-
-#musicbox i {
-  background: transparent;
+	top: 0px;
 }
 
 #pen {
-  pointer-events: none;
-  position: fixed;
-  bottom: -90px;
-  right: 340px;
-  width: 100px;
+	pointer-events: none;
+	position: fixed;
+	bottom: -90px;
+	right: 340px;
+	width: 100px;
 }
 
 button {
-  background: #c7d9f8;
-  border: none;
-  border-radius: 10px;
-  font-family: inherit;
-  font-size: inherit;
+	background: #c7d9f8;
+	border: none;
+	border-radius: 10px;
+	font-family: inherit;
+	font-size: inherit;
 }
 
 button:hover {
-  background: #e4a79d;
+	background: #e4a79d;
 }
 
 .memo {
-  cursor: move;
-  position: fixed;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px 1px var(--l-red);
-  scrollbar-color: #e4a79d #fffcdc;
+	cursor: move;
+	position: fixed;
+	overflow: hidden;
+	border-radius: 10px;
+	box-shadow: 5px 5px 10px 1px var(--l-red);
+	scrollbar-color: #e4a79d #fffcdc;
 }
 
 .memo h2 {
-  text-align: center;
-  margin: 5px;
-  font-size: 16px;
+	text-align: center;
+	margin: 5px;
+	font-size: 16px;
 }
 
 .memo h3 {
-  margin: 5px;
-  font-size: 13px;
+	margin: 5px;
+	font-size: 13px;
 }
 
 #memo1 {
-  text-align: center;
-  top: 50%;
-  right: 2%;
-  line-height: 18px;
-  font-size: 15px;
-  width: 350px;
-  height: 250px;
-  background: url("!g/memo-cloud.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+	text-align: center;
+	top: 50%;
+	right: 2%;
+	line-height: 18px;
+	font-size: 15px;
+	width: 350px;
+	height: 250px;
+	background: url("!g/memo-cloud.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 #memo2 {
-  text-align: left;
-  top: 20%;
-  left: 3%;
-  rotate: -3deg;
-  width: 300px;
-  height: 400px;
-  background: url("!g/memo-green.jpg");
-  background-size: cover;
-}
-
-#memo2 #side {
-  font-family: spirit;
-  font-size: 13px;
-  overflow: auto;
-  padding: 2px;
-  position: absolute;
-  width: 100px;
-  height: 185px;
-  bottom: 40px;
-  right: 10px;
+	text-align: left;
+	top: 10%;
+	left: 3%;
+	rotate: -3deg;
+	width: 300px;
+	height: 400px;
+	background: url("!g/memo-green.jpg");
+	background-size: cover;
 }
 
 #memo3 {
-  top: 67%;
-  left: 10%;
-  rotate: 14deg;
-  padding: 30px 20px;
-  width: 250px;
-  height: 170px;
-  background: url("!g/memo-picnic.jpg");
-  background-size: cover;
+	top: 67%;
+	left: 10%;
+	rotate: 14deg;
+	padding: 40px 20px;
+	width: 290px;
+	height: 190px;
+	background: url("!g/memo-picnic.jpg");
+	background-size: cover;
 }
 
 #memo4 {
-  top: 8%;
-  right: 5%;
-  rotate: -10deg;
-  width: 300px;
-  height: 290px;
-  background: url("!g/memo-cube.jpg");
-  background-position: top center;
-  background-size: cover;
+	top: 8%;
+	right: 5%;
+	rotate: -10deg;
+	width: 300px;
+	height: 290px;
+	background: url("!g/memo-cube.jpg");
+	background-position: top center;
+	background-size: cover;
 }
 
 #calendar {
-  display: block;
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  border: none;
-  overflow: hidden;
-  width: 175px;
-  height: 250px;
+	display: block;
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	border: none;
+	overflow: hidden;
+	width: 90%;
+	height: 260px;
 }
 
 .innermemo {
-  overflow: auto;
+	overflow: auto;
 }
 
 #memo1 .innermemo {
-  overflow: hidden;
-  padding: 10px;
-  margin: 10px 60px 0px 60px;
-  height: 200px;
+	overflow: hidden;
+	padding: 10px;
+	margin: 10px 60px 0px 60px;
+	height: 200px;
+}
+
+#memo3 .innermemo {
+	margin-top: 5px;
+	font-family: spirit, var(--fonts);
+	font-size: 13px;
+	height: 100px;
+}
+
+#memo3 p {
+	margin: 0;
+}
+
+#memo3 p.source {
+	text-align: right;
 }
 
 #memo4 .innermemo {
-  margin: 70px 40px 0px 20px;
-  height: 220px;
-  padding-right: 20px;
+	margin: 70px 40px 0px 20px;
+	height: 220px;
+	padding-right: 20px;
 }
 
 .memo a {
-  background: transparent;
-  text-decoration: underline;
+	background: transparent;
+	text-decoration: underline;
 }
 
 .memo a:hover {
-  text-decoration: line-through;
+	text-decoration: line-through;
 }
 
 @media only screen and (max-width: 1300px) {
-  #pen {
-    display: none;
-  }
+	#pen {
+		display: none;
+	}
 }
 
 @media only screen and (max-width: 700px) {
-  #notepad {
-    grid-template-columns: 25% 75%;
-  }
+	#notepad {
+		grid-template-columns: 25% 75%;
+	}
 }
 
 @media only screen and (max-width: 500px) {
-  aside {
-    display: none;
-  }
+	aside {
+		display: none;
+	}
 
-  #notepad {
-    display: block;
-    margin-top: 0;
-  }
+	#notepad {
+		display: block;
+		margin-top: 0;
+	}
 
-  #header {
-    height: 40px;
-  }
+	#header {
+		height: 40px;
+	}
 
-  main {
-    height: 600px;
-    border: none;
-    margin: 0px 3%;
-    padding: 10px;
-  }
+	main {
+		height: 600px;
+		border: none;
+		margin: 0px 3%;
+		padding: 10px;
+	}
 
-  details {
-    display: inline-block;
-  }
+	details {
+		display: inline-block;
+	}
 
-  .hide {
-    display: none;
-  }
+	.hide {
+		display: none;
+	}
 
-  #journal {
-    border: 6px double var(--l-red);
-  }
+	#journal {
+		border: 6px double var(--l-red);
+	}
 }
